Agregando guitarra acustica

--- a/index.html
+++ b/index.html
@@ -14,5 +14,7 @@
   <body>
     <img src="header.jpeg" alt="">
     <img src="hero.jpeg" alt="">
+    <img src="acustica.jpeg" alt="">
+    <img src="clasica.jpeg" alt="">
   </body>
 </html>
