--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <style media="screen">
       body {
         margin: 0;
+        border: 10px solid #192b36;
       }
       img {
         max-width: 100%;
@@ -15,6 +16,5 @@
     <img src="header.jpeg" alt="">
     <img src="hero.jpeg" alt="">
     <img src="acustica.jpeg" alt="">
-    <img src="clasica.jpeg" alt="">
   </body>
 </html>
