--- a/index.html
+++ b/index.html
@@ -12,9 +12,6 @@
     </style>
   </head>
   <body>
-    <img src="header.jpeg" alt="">
-    <img src="hero.jpeg" alt="">
-    <img src="acustica.jpeg" alt="">
-    <img src="clasica.jpeg" alt="">
+    <img src="nueva-version.jpeg" alt="">
   </body>
 </html>
